--- a/src/components/Layout/Navigation/NavIcon/index.scss
+++ b/src/components/Layout/Navigation/NavIcon/index.scss
@@ -2,6 +2,7 @@
   font-size: 15px;
   padding: 4px, 7px;
   margin-right: 7px;
+  margin-left: 14px;
   width: 30px;
   height: 30px;
   border-radius: 4px;
