--- a/src/components/Layout/Navigation/index.scss
+++ b/src/components/Layout/Navigation/index.scss
@@ -11,7 +11,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     width: 100%;
-    padding-left: 14px;
+    padding: 0;
     align-items: left;
     background: #3f4d67;
     li {
