remove outline from active bar item

--- a/src/components/Layout/Navigation/Navitem/index.scss
+++ b/src/components/Layout/Navigation/Navitem/index.scss
@@ -16,6 +16,7 @@
   :active {
     background: #333f54;
     color: #fff;
+    outline: none;
     :hover {
       background: #333f54;
       color: #fff;
