--- a/src/components/Dashboard/index.scss
+++ b/src/components/Dashboard/index.scss
@@ -11,7 +11,7 @@
   color: red;
 }
 .app-cards {
-  color: #667fa3;
+  color: #56657f;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -25,22 +25,44 @@
   > span {
     font-family: Roboto;
     font-size: 24px;
+    line-height: 36px;
     margin-top: 20px;
+    color: #667fa3;
   }
 }
 
 .card {
   background-color: #dde5f3;
+  background-clip: border-box;
   margin-top: 15px;
-  border-width: 1.5px;
-  border-color: #3f4d67;
+  border: 0.5px solid #3f4d67;
+  border-radius: 5px;
   padding: 25px;
   justify-content: center;
   align-items: center;
-  // top: 16px;
 }
 
 .card-label {
   margin-top: 10px;
   font-weight: 600;
+  color: #56657f;
+}
+
+.card-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.chart-wrapper {
+  .card {
+    border: 0;
+  }
+}
+
+.info-cards {
+  @media only screen and (min-width: 992px) {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
 }
