--- a/src/components/Dashboard/index.scss
+++ b/src/components/Dashboard/index.scss
@@ -55,14 +55,26 @@
 }
 
 .chart-wrapper {
+  display: flex;
+  width: 100%;
+  .card-body {
+    width: 100%;
+  }
+
   .card {
     border: 0;
+    width: 100%;
+    display: flex;
   }
 }
 
 .info-cards {
+  position: relative;
+  width: 100%;
+  display: flex;
   @media only screen and (min-width: 992px) {
     margin-left: 30px;
     margin-right: 30px;
+    width: 100%;
   }
 }
