--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,11 +1,14 @@
 .footer {
   display: flex;
+  position: fixed;
+  flex-direction: column;
+  width: 100%;
   justify-content: center;
-  height: 5rem;
-  background: #f2f2f2;
+  height: 40px;
+  //background: #f2f2f2;
+  background: blue;
   text-align: center;
-  z-index: 2444;
-  margin-bottom: 0px;
+  bottom: 0;
   > span {
     color: #000000;
   }
@@ -13,7 +16,7 @@
 @media only screen and (min-width: 992px) {
   .footer {
     margin-left: 264px;
-    margin-right: 0px;
+    width: calc(100% - 264px);
   }
 }
 /*
