--- a/src/components/Dashboard/index.scss
+++ b/src/components/Dashboard/index.scss
@@ -70,8 +70,9 @@
 
 .info-cards {
   position: relative;
-  width: 100%;
+  min-width: 100%;
   display: flex;
+  flex-direction: column;
   @media only screen and (min-width: 992px) {
     margin-left: 30px;
     margin-right: 30px;
