--- a/src/Home/Modal/index.scss
+++ b/src/Home/Modal/index.scss
@@ -98,6 +98,7 @@
       }
     }
   }
+
   .modal-content {
     min-width: 100%;
     min-height: 100%;
@@ -137,5 +138,16 @@
         }
       }
     }
+  }
+  .submit__button {
+    width: 70%;
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (min-width: 669px) {
+  .submit__button {
+    width: 40%;
+    font-size: 2rem;
   }
 }
